examples/invalid/64_external_type_parameters.lane
module InvalidExternalTypeParameters

// External host types are zero-parameter nominal types.
extern type Box[A : Type] : Type
